# epresence

./: README.md
backend/: Cargo.toml
backend/migrations/: 0001_users_table.up.sql  0002_admins_table.sql  0002_admins_table.up.sql  0003_groups_table.sql  0004_sessions_table.up.sql  0005_attendance_table.sql  0006_user_groups_table.up.sql  0007_logs_table.sql  0008_rfid_logs_table.down.sql  0008_rfid_logs_table.sql  0009_updated_at_trigger.down.sql  0009_updated_at_trigger.sql  0010_seed_db.down.sql  0010_seed_db.up.sql
backend/src/: appstate.rs  main.rs  models.rs
backend/src/routes/: mod.rs  rfid.rs
backend/src/routes/graphql/: mod.rs  mutation.rs  query.rs  resolvers.rs
embedded/src/: main.cpp
esp32_epresence/: platformio.ini
esp32_epresence/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: SessionCard.tsx  Sidebar.tsx
frontend/src/pages/: Groups.tsx  Logs.tsx  Session.tsx  Sessions.tsx  Users.tsx
