[package]
name = "epresence-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.215", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
sqlx = "0.8.2"
tokio = "1.28.2"
