[package]
name = "epresence-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.11", features = ["chrono"] }
async-graphql-axum = "7.0.11"
axum = "0.7.4"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.2", features = ["chrono"] }
tokio = "1.28.2"
tower-http = { version = "0.6.1", features = ["cors"] }
